﻿[B]Version 0.1  (29.03.2018)[/B]
- Initial release
...

[B]Version 1.0.1  (06.10.2018)[/B] by realvito
- fixed: Bei jedem autom. Update der vom User gemachten Einträge wird nicht die aktuelle Uhrzeit übergeben
- fixed: Ausführung/Update der vom User gemachten Einträge findet unabhängig des übergebenen Stunden-Intervalls - immer stündlich statt
- optimized: Man kann jetzt sowohl den Eintrag in "Crontab" als auch den erstellten Ordner der Serie in der KODI-Medienbibliothek löschen (settings)
- optimized: Script komplett überarbeitet
- added: Direkte LOG-Meldungen sowohl bei normaler Ausführung als auch bei Fehlern (nicht Debugmodus)

[B]Version 1.0.2  (20.10.2019)[/B] by realvito
- fixed: Azeige und Löschen von Titeln mit Sonderzeichen fehlerhaft

B]Version 1.0.3  (03.02.2020)[/B] by realvito
- last OLDVERSION with Path = service.L0RE.cron

==============================================================

[B]Version 2.0.4  (03.02.2020)[/B] by realvito
- Pluginname changed for KODI-compatibility (old=service.L0RE.cron -> new=service.cron.autobiblio)
- added: Addon kompatibel mit PYTHON-Vers.3 gemacht (für KODI-19+) :-)