@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<addon id="service.cron.autobiblio" name="Crontab für andere Addons [COLOR FF00EE00](neu)[/COLOR]" version="2.0.4" provider-name="L0RE, realvito">
+<addon id="service.cron.autobiblio" name="Crontab für andere Addons [COLOR FF00EE00](neu)[/COLOR]" version="2.0.5" provider-name="L0RE, realvito">
 	<requires>
 		<import addon="xbmc.python" version="2.25.0"/>
 	</requires>
@@ -24,7 +24,11 @@
 		<assets>
 			<icon>icon.png</icon>
 		</assets>
-		<news>[B][COLOR orangered]Version 2.0.4  (03.02.2020)[/COLOR][/B] by realvito[CR]
+		<news>[B][COLOR orangered]Version 2.0.5  (25.02.2020)[/COLOR][/B] by realvito[CR]
+- fixed: NameError: global name 'addon' is not defined
+- added: Anpassungen für 'plugin.video.rtlnow' damit auch einzelne Jahrgänge hinzugefügt und gelöscht werden können
+------------------------------------------------------------------------------------------------------------------------------------
+[B][COLOR orangered]Version 2.0.4  (03.02.2020)[/COLOR][/B] by realvito[CR]
 - Pluginname changed for KODI-compatibility (old=service.L0RE.cron -> new=service.cron.autobiblio)
 - added: Addon kompatibel mit PYTHON-Vers.3 gemacht (für KODI-19+) :-)
 		</news>
